bisonc++ (4.01.03) 

  * Textual corrections of the man-page and manual.

  * Provided print()'s implementation in the bisonc++.ih with a correct
    class-prifix (was a fixed Parser::)


bisonc++ (4.01.02) 

  * Bisonc++ returns 0 for options --help and --version

  * Catching Errno exceptions is replaced by catching std::exception
    exceptions 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 24 Jan 2013 08:14:59 +0100

bisonc++ (4.01.01) 

  * The following #defines in INSTALL.im can be overruled by defining
    identically named environment variables: 
        CXX      defines the name of the compiler to use. By default `g++'
        CXXFLAGS the options passed to the compiler. 
                 By default `-Wall --std=c++0x -O2 -g'
        LDFLAGS  the options passed to the linker. By default no options are
                 passed to the linker.
        SKEL     the directory where the skeletons are stored

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 15 Jul 2012 14:44:46 +0200
        
bisonc++ (4.01.00) 

  * Repaired a long-existing bug due to which some S/R conflicts are solved by
    a reduce, where a shift should have been used. See
    README.states-and-conflicts for details.

  * Removed line-numbers from final warning/error messages

  * This version requires Bobcat >= 3.00.00

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 03 May 2012 21:21:47 +0200

bisonc++ (4.00.00) 

  * Implemented the %polymorphic directive. Bisonc++ itself uses %polymorphic
    to implement its own polymorphic semantic values; man-page and manual
    extended with sections about polymorphic semantic values.

  * Implemented the %weak-tags directive. By default %polymorphic declares 
    an `enum class Tag__', resulting in strongly typed polymorphic tags. If
    the traditional tag declaration is preferred, the %weak-tags directive can
    be specified in addition to %polymorphic, resulting in the declaration
    `enum Tag__'.
