@@ -46,6 +46,48 @@ internally'' is used should not be called by user-defined code.
        Used internally.
     it() bf(void Base::errorVerbose__+nop()()):nl()
        Used internally.
+
+    it() bf(void exceptionHandler__(std::exception const &exc)):nl()
+        
+       This member's default implementation is provided inline in the
+        tt(parser.ih) internal header file. It consists of a mere tt(throw)
+        statement, rethrowing a caught exception.
+
+       The tt(parse) member's body essentially consists of a tt(while)
+        statement, in which the next token is obtained via the parser's
+        tt(lex) member. This token then is processed according to the current
+        state of the parsing process. This may result in executing actions
+        over which the parsing process has no control and which may result in
+        exceptions being thrown.
+
+       Such exceptions do not necessarily have to terminate the parsing
+        process: they could be thrown by code, linked to the parser, that
+        simply checks for semantic errors (like division by zero) and
+        throws an exception if the error is observed.
+
+       The member tt(exceptionHandler__) is used to handle such exceptions
+        without necessarily ending the parsing process. It receives any
+        tt(std::exception) thrown by the parser's actions, as though the
+        action block itself was surrounded by a tt(try ... catch) statement.
+        It is of course still possible to use an explicit tt(try ... catch)
+        statement within an action block. However, tt(exceptionHandler__) can be
+        used to factor out code that is common to various action blocks.
+
+        The next example shows an explicit implementation of
+        tt(exceptionHandler__): any tt(std::exception) thrown by the parser's
+        action blocks is caught, showing the exception's message, and
+        increasing the parser's error count. After this parsing continues as
+        though no exception had been thrown:
+        verb(
+    void Parser::exceptionHandler__(std::exception const &exc)
+    {
+        std::cout << exc.what() << '\n';
+        ++d_nErrors__;
+    }
+            )
+           
+
+
     it() bf(void executeAction+nop()(int)):nl()
        Used internally.
     it() bf(int lex()):nl()
